[tool.poetry]
name = "konawall"
version = "0.1.0"
license = "MIT"
description = "A hopefully cross-platform service for fetching wallpapers and setting them"
authors = [
    "Kat Inskip <kat@inskip.me>"
]
readme = "README.MD"
packages = [
    {include = "konawall"}
]

[tool.poetry.scripts]
gui = "konawall.gui:main"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.0.1"
screeninfo = "^0.8.1"
requests = "^2.31.0"
termcolor = "^2.3.0"
wxpython = "^4.2.2"
humanfriendly = "^10.0"
xdg-base-dirs = "^6.0.1"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
